Ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blockchain-ingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
spec:
  rules:
  - http:
      paths:
      - path: /blockchain
        pathType: Prefix
        backend:
          service:
            name: blockchain-service
            port:
              number: 80
      - path: /qrcode
        pathType: Prefix
        backend:
          service:
            name: qrcode-service
            port:
              number: 80
      - path: /twitter
        pathType: Prefix
        backend:
          service:
            name: twitter-service
            port:
              number: 80
